[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Enemies/Duck/Duck+Fall+Hit+Idle+Jump+Jump Anticipation.png" type="Texture" id=1]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitbox and Hurtbox/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Duck.gd" type="Script" id=4]
[ext_resource path="res://Assets/Other/Dust Particle.png" type="Texture" id=5]
[ext_resource path="res://Hitbox and Hurtbox/Hurtbox.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 13.5 )

[sub_resource type="Animation" id=2]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -17.5 ), Vector2( 0, -13.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -17.5 ), Vector2( 0, -13.5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "JumpAnticipation"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -13.5 ) ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 12.0
height = 10.0

[sub_resource type="CircleShape2D" id=9]
radius = 147.0

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 100.2
gravity = Vector3( 0, -10, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.4
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=11]
radius = 12.0416

[node name="Duck" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -18 )
texture = ExtResource( 1 )
hframes = 21
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -17.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Fall = SubResource( 2 )
anims/Hit = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/JumpAnticipation = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 8 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 9 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 25 )
emitting = false
amount = 4
lifetime = 0.3
one_shot = true
process_material = SubResource( 10 )
texture = ExtResource( 5 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 11 )

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
